<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BabyMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="titleRecordingStop">Stop Recording</string>
    <string name="titleRecordingStart">Start Recording</string>
    <string name="titleSubscribingStart">Start Service</string>
    <string name="gcm_send_message"></string>
    <string name="token_error_message">Token Error</string>
    <string name="registering_message"></string>
    <string name="buttonSendText">Send test message</string>
    <string name="titlePrefs">Set Topic</string>
    <string name="titleTopic">Topic</string>
    <string name="summaryTopic">Topic for subscription</string>
    <string name="testMessage">This is a test message.</string>
    <string name="cryingMessage">Your baby is crying.Sing a lullaby for him!</string>
    <string name="movingMessage">Your baby is moving.Go take care of him!</string>
    <string name="stopMoving">Your baby is chillin.</string>
    <string name="stopCrying">Your baby is quiet and peaceful.</string>
    <string name="volume_level">Volume Level: n/a</string>
    <string name="babyState">State: </string>
    <string name="movesCount">Moves Count:</string>
    <string name="notSleeping">awake</string>
    <string name="sleeping">sleeping</string>
    <string name="parent_button">Parent Mode</string>
    <string name="child_button">Child Mode</string>
    <string name="parent_setup">Setup</string>
    <string name="record_button">RECORD</string>
    <string name="stop_button">STOP</string>
</resources>
